<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expensify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="totalIncome_currentMonth">Tổng thu tháng này</string>
    <string name="totalOutcome_currentMonth">Tổng chi tháng này</string>
    <string name="totalIncome_lastMonth">Tổng thu tháng trước</string>
    <string name="totalOutcome_lastMonth">Tổng chi tháng trước</string>
    <string name="salary">Lương</string>
    <string name="otherIncome">Thu nhập khác</string>
    <string name="moneyTransferred">Tiền chuyển đến</string>
    <string name="interest">Thu lãi</string>
    <string name="otherRevenues">Các khoản thu khác</string>
    <string name="update">Cập nhật</string>
    <string name="foodAndDrink">Ăn uống</string>
    <string name="billAndUtilities">Hóa đơn tiện ích</string>
    <string name="shopping">Mua sắm</string>
    <string name="family">Gia đình</string>
    <string name="transportations">Di chuyển</string>
    <string name="health">Sức khỏe</string>
    <string name="education">Giáo dục</string>
    <string name="giftAndDonation">Quà tặng quyên góp</string>
    <string name="entertainment">Giải trí</string>
    <string name="insurance">Bảo hiểm</string>
    <string name="investment">Đầu tư</string>
    <string name="otherExpenses">Các chi phí khác</string>
    <string name="accept">Xác nhận</string>
    <string name="ngay">Ngày</string>
    <string name="content">Nội dung</string>
    <string name="amount">Số tiền</string>
    <string name="add">Thêm</string>
    <string name="wallet">Tiền mặt</string>
    <string name="balance">Số dư</string>
    <string name="back">Quay lại</string>
    <string name="edit">Sửa</string>
    <string name="deleteTransaction">Xóa giao dịch</string>
    <string name="dateTime">Thời gian</string>
    <string name="detailCategory">Phân loại</string>
    <string name="selectDate">Chọn thời gian</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="fullname">Họ tên</string>
    <string name="telephone">Số điện thoại</string>
    <string name="editProfile">Sửa thông tin</string>
    <string name="login">Đăng nhập</string>
    <string name="forgetPassword">Quên mật khẩu?</string>
    <string name="recommendRegister">Chưa có tài khoản? Đăng ký</string>
    <string name="signup">Đăng ký</string>
    <string name="confirmPassword">Xác nhận password</string>
    <string name="recommendLogin">Đã có tài khoản? Đăng nhập</string>
    <string name="enterEmail">Nhập email của bạn:</string>
    <string name="reset">Tạo lại</string>
    <string name="logout">Đăng xuất</string>
    <string name="changPassword">Đổi mật khẩu</string>

</resources>