<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/totalOutcome_currentMonth"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Các TextView chi tiết -->
            <TextView
                android:id="@+id/tong_chi_thang_nay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/totalOutcome_currentMonth"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/foodAndDrink"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/billAndUtilities"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/shopping"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/family"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/transportations"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/health"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/education"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/giftAndDonation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/entertainment"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/insurance"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/investment"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/detail12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/otherExpenses"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/chi_thang_truoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/totalOutcome_lastMonth"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/update"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
