<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ececec"
    android:orientation="vertical">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="space_between"
        android:paddingHorizontal="4dp"
        android:background="@color/white"
        >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@android:color/transparent"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            />
    </com.google.android.flexbox.FlexboxLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:background="@color/white">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/dateTime" />
            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="18dp"
                android:text="14-04-2024 12:44:30" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/detailCategory" />
            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="18dp"
                android:text="Lương " />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textStyle="bold"

                android:text="@string/content" />
            <TextView
                android:id="@+id/txtNote"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="Tiền lương tháng 3 iền lương tháng 3iền lương tháng 3iền lương tháng 3iền lương tháng 3iền lương tháng 3" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/amount" />
            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="32dp"
                android:textColor="@color/green"
                android:text="200.000.000 " />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnDelete"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/deleteTransaction"
        android:textColor="@color/white"
        android:textSize="16dp" />
</LinearLayout>