<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="right" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/bank" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ngay"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/datePicker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextExpenseContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="@string/content" />

    <EditText
        android:id="@+id/editTextExpenseAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="@string/amount"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="65dp"
            android:entries="@array/categories" />

        <Spinner
            android:id="@+id/spinnerSelectionCategory"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/be_vietnam_bold"
        android:textSize="18dp"
        android:text="@string/add" />

</LinearLayout>